--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -8,39 +8,16 @@
 }
 
 .header__menu{
-    display: flex;
-    align-items: center;
-    list-style: none;
-    padding: 0;
-    gap: 2em;
+    display: none;
 }
 
-.header__link{
-    font-size: var(--size-xs);
-    font-weight: 600;
-    color: var(--clr-purple500);
-    transition: color 0.3s;
-}
-
-.header__link:hover {
-    color: var(--clr-red);
-}
-
-.header__line{
-    border: 1px solid var(--clr-purple500);
-    padding-top: 1.5rem;
-}
-
-.header__sun{
+.header__bars{
+    color: var(--clr-white);
+    height: var(--size-2xl);
+    width: var(--size-2xl);
     display: block;
-    color: var(--clr-purple500);
-    width: var(--size-base);
-    height: var(--size-base);
 }
 
-.header__resume{
-    font-size: var(--size-xs);
-}
 
 /*xs*/
 /*@media (min-width: 475px) {}*/
@@ -49,10 +26,65 @@
 /*@media (min-width: 640px) {}*/
 
 /*md*/
-/*@media (min-width: 768px) {}*/
+@media (min-width: 768px) {
+    .header__menu{
+        display: flex;
+        align-items: center;
+        list-style: none;
+        padding: 0;
+        gap: 2em;
+    }
+    
+    .header__link{
+        font-size: var(--size-xs);
+        font-weight: 600;
+        color: var(--clr-purple500);
+        transition: color 0.3s;
+    }
+    
+    .header__link:hover {
+        color: var(--clr-red);
+    }
+    
+    .header__line{
+        border: 1px solid var(--clr-purple500);
+        padding-top: 1.5rem;
+    }
+    
+    .header__sun{
+        display: block;
+        color: var(--clr-purple500);
+        width: var(--size-base);
+        height: var(--size-base);
+    }
+    
+    .header__resume{
+        font-size: var(--size-xs);
+    }
+
+    .header__bars{
+        display: none;
+    }
+
+}
 
 /*Lg*/
-/*@media (min-width: 1024px) {}*/
+@media (min-width: 1024px) {
+    
+    .header__link{
+        font-size: var(--size-sm);
+    }
+    
+    .header__sun{
+        width: var(--size-xl);
+        height: var(--size-xl);
+    }
+    
+    .header__resume{
+        font-size: var(--size-sm);
+    }
+
+}
 
 /*xL*/
 /*@media (min-width: 1280px) {}*/
