--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -29,4 +29,100 @@
 
 .hero__description{
     color: var(--clr-purple500);
+    font-size: var(--size-sm);
 }
+
+.hero__btn{
+    font-size: var(--size-sm);
+    text-transform: capitalize;
+}
+
+/*xs*/
+@media (min-width: 475px) {
+    .hero{
+        gap: 1rem;
+    }
+    
+    .hero__img{
+        width: 6.5rem;
+        height: 6.5rem;
+    }
+    
+    .hero__subtitle{
+        font-size: var(--size-lg);
+    }
+    
+    .hero__title{
+        font-size: var(--size-5xl);
+    }
+    
+    .hero__description{
+        font-size: var(--size-base);
+    }
+    
+    .hero__btn{
+        font-size: var(--size-base);
+    }
+}
+
+/*sm*/
+/*@media (min-width: 640px) {}*/
+
+/*md*/
+/*@media (min-width: 768px) {}*/
+
+/*Lg*/
+@media (min-width: 1024px) {
+    
+    .hero__img{
+        width: 8rem;
+        height: 8rem;
+    }
+    
+    .hero__subtitle{
+        font-size: var(--size-2xl);
+    }
+    
+    .hero__title{
+        font-size: var(--size-7xl);
+    }
+    
+    .hero__description{
+        font-size: var(--size-lg);
+    }
+    
+    .hero__btn{
+        font-size: var(--size-lg);
+    }
+}
+
+/*xL*/
+@media (min-width: 1280px) {
+    .hero{
+        gap: 2rem;
+    }
+    
+    .hero__img{
+        width: 9rem;
+        height: 9rem;
+    }
+    
+    .hero__subtitle{
+        font-size: var(--size-4xl);
+    }
+    
+    .hero__title{
+        font-size: var(--size-9xl);
+    }
+    
+    .hero__description{
+        font-size: var(--size-xl);
+    }
+    
+    .hero__btn{
+        font-size: var(--size-xl);
+    }
+}
+
+/*2xL*/
+/*@media (min-width: 1536px) {}*/
