--- a/src/styles/sobre.css
+++ b/src/styles/sobre.css
@@ -1,3 +1,9 @@
+.about{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 .about__content{
     display: flex;
     flex-direction: column;
@@ -46,3 +52,35 @@
 .about__line{
     border-color: var(--clr-purple500);
 }
+
+/*xs*/
+/*@media (min-width: 475px) {}*/
+
+/*sm*/
+@media (min-width: 640px) {
+    .about__img-wrapper{
+        margin: 0 auto;
+    }
+
+    .about__image{
+        width: 28.6875rem;
+    }
+}
+
+/*md*/
+/*@media (min-width: 768px) {}*/
+
+/*Lg*/
+@media (min-width: 1024px) {
+    .about{
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+/*xL*/
+/*@media (min-width: 1280px) {}*/
+
+/*2xL*/
+/*@media (min-width: 1536px) {}*/
