--- a/src/styles/sobre.css
+++ b/src/styles/sobre.css
@@ -77,6 +77,18 @@
         justify-content: space-between;
         align-items: center;
     }
+
+    .about__description{
+        font-size: var(--size-base);
+    }
+
+    .about__itens{
+        font-size: var(--size-base);
+    }
+
+    .about__tecs{
+        font-size: var(--size-base);
+    }
 }
 
 /*xL*/
