--- a/src/styles/featured.css
+++ b/src/styles/featured.css
@@ -25,11 +25,74 @@
     color: var(--clr-purple500);
 }
 
+.featured__label {
+    font-size: var(--size-base);
+    text-transform: capitalize;
+}
+
+.featured__tech-stack {
+    padding: 0;
+    list-style: none;
+}
+
+.featured__info{
+    font-size: var(--size-sm);
+    color: var(--clr-purple500);
+    text-transform: capitalize;
+    margin: 1rem 0;
+}
+
+.featured__info-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    margin-top: 2rem;
+    
+}
+
+.featured__info-container div{
+    flex: 1;
+    min-width: 250px;
+}
+
+.featured__img-wrapper{
+    position: relative;
+}
+
+.featured__img-wrapper::after{
+    content: '';
+    background-color: rgba(110, 17, 176, 0.4);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    transition: background-color 0.3s;
+}
+
+.featured__img-wrapper:hover::after{
+    background-color: rgba(110, 17, 176, 0.1);
+}
+
+.featured__img-container{
+    margin-top: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 1rem;
+}
+
 /*xs*/
 /*@media (min-width: 475px) {}*/
 
 /*sm*/
-/*@media (min-width: 640px) {}*/
+@media (min-width: 640px) {
+
+    .featured__img-container{
+        grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+        grid-gap: 1rem;
+    }
+}
 
 /*md*/
 /*@media (min-width: 768px) {}*/
