inicio da parte de projetos

--- a/src/styles/featured.css
+++ b/src/styles/featured.css
@@ -98,7 +98,26 @@
 /*@media (min-width: 768px) {}*/
 
 /*Lg*/
-/*@media (min-width: 1024px) {}*/
+@media (min-width: 1024px) {
+    .featured__title {
+        font-size: var(--size-4xl);
+        text-transform: uppercase;
+    }
+    
+    .featured__subtitle {
+        font-size: var(--size-base);
+        text-transform: capitalize;
+    }
+
+    .featured__info{
+        font-size: var(--size-base);
+        margin: 1.5rem 0;
+    }
+
+    .featured__label {
+        font-size: var(--size-xl);
+    }
+}
 
 /*xL*/
 /*@media (min-width: 1280px) {}*/
