--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -1,29 +1,122 @@
+.work {
+    text-align: center;
+}
+
 .work__title {
     font-size: var(--size-2xl);
     text-transform: uppercase;
-    text-align: center;
 }
 
 .work__description {
     max-width: 60ch;
     font-size: var(--size-sm);
     color: var(--clr-purple500);
-    text-align: center;
     margin: 1rem auto;
+}
+
+.work__project-title {
+    font-size: var(--size-base);
+    margin-bottom: 1rem;
+}
+
+.work__img-wrapper {
+    position: relative;
+}
+
+.work__img-wrapper::after {
+    content: '';
+    background-color: rgba(110, 17, 176, 0.4);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    transition: background-color 0.3s;
+}
+
+.work__img-wrapper:hover::after {
+    background-color: rgba(110, 17, 176, 0.1);
+}
+
+.work__project-description1 {
+    font-size: var(--size-sm);
+    color: var(--clr-purple500);
+    margin: 1rem 0;
+}
+
+.work__project-description2 {
+    font-size: var(--size-sm);
+    color: var(--clr-purple400);
+    margin-bottom: 1rem;
+}
+
+.work__project-btn {
+    font-size: var(--size-sm);
+}
+
+.work__project:not(:last-child) {
+    margin-bottom: 5rem;
+}
+
+.work__project-subtitle {
+    display: none;
 }
 
 /*xs*/
 /*@media (min-width: 475px) {}*/
 
 /*sm*/
-/*@media (min-width: 640px) {}*/
+@media (min-width: 640px) {
+    .work__container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+            'img1 content1'
+            'img2 content2';
+        place-items: center;
+    }
+
+    .work__img1 {
+        grid-area: img1;
+    }
+
+    .work__img2 {
+        grid-area: img2;
+    }
+
+    .work--content1 {
+        grid-area: content1;
+    }
+
+    .work--content2 {
+        grid-area: content2;
+    }
+
+    .work__project {
+        padding: 0 1rem;
+    }
+
+    .work__project-title {
+        display: none;
+    }
+
+    .work__project:not(:last-child) {
+        margin-bottom: 0;
+    }
+
+    .work__project-subtitle {
+        display: block;
+        font-size: var(--size-base);
+    }
+}
 
 /*md*/
 /*@media (min-width: 768px) {}*/
 
 /*Lg*/
 @media (min-width: 1024px) {
-    
+
     .work__title {
         font-size: var(--size-4xl);
     }
@@ -31,6 +124,25 @@
     .work__description {
         font-size: var(--size-base);
         margin: 1rem auto;
+    }
+
+    .work__project-title {
+        font-size: var(--size-xl);
+        margin-bottom: 1.5rem;
+    }
+
+    .work__project-description1 {
+        font-size: var(--size-base);
+        margin: 1.5rem 0;
+    }
+
+    .work__project-description2 {
+        font-size: var(--size-base);
+        margin-bottom: 1.5rem;
+    }
+
+    .work__project-btn {
+        font-size: var(--size-base);
     }
 }
 
