feito a parte de projetos e a de contato

--- a/src/styles/featured.css
+++ b/src/styles/featured.css
@@ -80,6 +80,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 1rem;
+    width: 90%;
+    margin: 0 auto;
 }
 
 /*xs*/
