--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -63,6 +63,11 @@
     display: none;
 }
 
+.work__container {
+    width: 90%;
+    margin: 0 auto;
+}
+
 /*xs*/
 /*@media (min-width: 475px) {}*/
 
@@ -72,7 +77,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-areas:
-            'img1 content1'
+            'content1 img1'
             'img2 content2';
         place-items: center;
     }
