--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,7 +4,8 @@
     align-items: center;
     padding-top: 1rem;
     padding-bottom: 2rem;
-
+    position: relative;
+    z-index: 9999;
 }
 
 .header__menu{
