--- a/src/styles/mobile-nav.css
+++ b/src/styles/mobile-nav.css
@@ -1,14 +1,55 @@
 .mobile-nav {
     position: absolute;
-    border: 1px solid red;
     top: 0;
     left: 0;
     z-index: 999;
     width: 100%;
     height: 100%;
     background-color: var(--clr-purple950);
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+.mobile-nav__menu {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.mobile-nav__link {
+    font-size: var(--size-sm);
+    font-weight: 600;
+    color: var(--clr-purple400);
+    transition: color 0.3s;
+}
+
+.mobile-nav__link:hover {
+    color: var(--clr-red);
+}
+
+.mobile-nav__link-line {
+    border: 1px solid var(--clr-purple500);
+    padding-right: 1.5em;
+}
+
+.mobile-nav__sun {
+    display: block;
+    width: var(--size-xl);
+    height: var(--size-xl);
+    color: var(--clr-purple400);
+    transition: color 0.3s;
+}
+
+.mobile-nav__sun:hover {
+    color: var(--clr-red);
+}
+
+.mobile-nav__link-resume {
+    font-size: var(--size-sm);
 }
